# AI-Agents

./: .gitignore  README.md  ai-projects.md
Pattern 1- ReAct - Projects/A1.1-GitHub-Issue-Helper-Agent/: .gitignore  README.md  pyproject.toml  requirements.txt
Pattern 1- ReAct - Projects/A1.1-GitHub-Issue-Helper-Agent/app/agent/: graph.py
Pattern 1- ReAct - Projects/A1.1-GitHub-Issue-Helper-Agent/app/core/: agent_state.py  config.py
Pattern 1- ReAct - Projects/A1.1-GitHub-Issue-Helper-Agent/app/schemas/: tools.py
Pattern 2 - Routing - Projects/A2.1-Multi-Purpose Office Assistant/: .gitignore  README.md  pyproject.toml  requirements.txt
Pattern 2 - Routing - Projects/A2.1-Multi-Purpose Office Assistant/app/: main.py
Pattern 2 - Routing - Projects/A2.1-Multi-Purpose Office Assistant/app/agents/: workflow.py
Pattern 2 - Routing - Projects/A2.1-Multi-Purpose Office Assistant/app/api/: agent_router.py
Pattern 2 - Routing - Projects/A2.1-Multi-Purpose Office Assistant/app/core/: config.py  state.py
Pattern 2 - Routing - Projects/A2.1-Multi-Purpose Office Assistant/app/models/: models.py
Pattern 2 - Routing - Projects/A2.3-Ecommerce Shopping Assistant/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Pattern 2 - Routing - Projects/A2.3-Ecommerce Shopping Assistant/app/agent/: workflow.py
Pattern 2 - Routing - Projects/A2.3-Ecommerce Shopping Assistant/app/agent/subworkflows/: order_tracking_workflow.py  product_search_workflow.py  (+3 more)
Pattern 2 - Routing - Projects/A2.3-Ecommerce Shopping Assistant/app/api/: routes.py
Pattern 2 - Routing - Projects/A2.3-Ecommerce Shopping Assistant/app/core/: config.py  data_loader.py  tools.py
Pattern 2 - Routing - Projects/A2.3-Ecommerce Shopping Assistant/data/: offers.json  orders.json  products.json  return_policy.json  reviews.json
Pattern 2 - Routing - Projects/A2.3-Ecommerce Shopping Assistant/tests/: test_api.py  test_data_loader.py  test_subworkflows.py  test_tools.py  test_workflow.py
Pattern 3 - Reflection - Projects/A3.1-Blog-Writer-And-Reviewer-Agent/: .gitignore  PRD.md  README.md  main.py  pyproject.toml  requirements.txt
Pattern 3 - Reflection - Projects/A3.1-Blog-Writer-And-Reviewer-Agent/app/agent/: workflow.py
Pattern 3 - Reflection - Projects/A3.1-Blog-Writer-And-Reviewer-Agent/app/api/: router.py
Pattern 3 - Reflection - Projects/A3.1-Blog-Writer-And-Reviewer-Agent/app/core/: config.py
Pattern 3 - Reflection - Projects/A3.1-Blog-Writer-And-Reviewer-Agent/app/models/: schemas.py
Pattern 3 - Reflection - Projects/A3.1-Blog-Writer-And-Reviewer-Agent/tests/: conftest.py  test_workflow.py
Rag-Chat-With-PDF/: README.md  pyproject.toml  requirements.txt
Rag-Chat-With-PDF/app/core/: config.py
(+52 files in other folders)
