[project]
name = "rag-chat-with-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "pytest>=9.1.0",
    "sentence-transformers>=5.6.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]
