[project]
name = "github-issue-helper-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.11",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]
