[project]
name = "a2-1-multi-purpose-office-assistant"
version = "0.1.0"
description = "An intelligent office assistant that routes requests to specialized agents using LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-deepseek>=1.1.0",
    "langgraph>=1.2.6",
    "langsmith>=0.9.3",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]
