[project]
name = "a2-3-ecommerce-shopping-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-deepseek>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.9.7",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.50.0",
]
