[project]
name = "a3-1-blog-writer-and-reviewer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-deepseek>=1.1.0",
    "langgraph>=1.2.9",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
]
